@@ -4,6 +4,7 @@ import com.lab.library.model.Book;
 import com.lab.library.repository.BookRepository;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class BookService {
 
@@ -49,9 +50,12 @@ public class BookService {
 
   
     public List<Book> searchByTitle(String query) {
+        if (query == null) {
+            return List.of();
+        }
         return repository.findAll().stream()
-                .filter(b -> b.getTitle().toLowerCase().contains(query.toLowerCase()))
-                .toList();
+                .filter(b -> b.getTitle() != null && b.getTitle().toLowerCase().contains(query.toLowerCase()))
+                .collect(Collectors.toList());
     }
 
 
